After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761854 - Time zone - set location isn't very prominent
Time zone - set location isn't very prominent
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-02-11 10:24 UTC by Allan Day
Modified: 2016-02-12 00:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allan Day 2016-02-11 10:24:14 UTC
The set location is indicated by a tiny pin icon, and by a string that doesn't look very much like a status indicator. It's not a very prominent indication of what the location is set to - which is the key piece of information that this view needs to communicate.

In the control center, a bubble is shown next to the pin with information about the current time zone setting. Showing this in initial setup would help a lot.

(Also, it would be great if the bubble could actually point at the current location...)