Sync the timezone map widget with the control-center

The main motivation for this change is that we want to
show an indication of the selected timezone, and the
control-center version of the map has a built-in bubble
for this purpose.

At the same time, allow selecting the timezone with
the mouse.

https://bugzilla.gnome.org/show_bug.cgi?id=761854