gnome-initial-setup/pages/timezone/cc-timezone-map.c
@@ -24,6 +24,7 @@
 #include "cc-timezone-map.h"
 #include <math.h>
 #include <string.h>
+#include "tz.h"
 
 G_DEFINE_TYPE (CcTimezoneMap, cc_timezone_map, GTK_TYPE_WIDGET)
 
@@ -35,15 +36,88 @@ G_DEFINE_TYPE (CcTimezoneMap, cc_timezone_map, GTK_TYPE_WIDGET)
 
 #define DATETIME_RESOURCE_PATH "/org/gnome/control-center/datetime"
 
+typedef struct
+{
+  gdouble offset;
+  guchar red;
+  guchar green;
+  guchar blue;
+  guchar alpha;
+} CcTimezoneMapOffset;
+
 struct _CcTimezoneMapPrivate
 {
   GdkPixbuf *orig_background;
   GdkPixbuf *orig_background_dim;
+  GdkPixbuf *orig_color_map;
 
   GdkPixbuf *background;
+  GdkPixbuf *color_map;
+  GdkPixbuf *pin;
 
-  GWeatherLocation *location;
+  guchar *visible_map_pixels;
+  gint visible_map_rowstride;
+
+  gdouble selected_offset;
+
+  TzDB *tzdb;
+  TzLocation *location;
+
+  gchar *bubble_text;
 };
+
+enum
+{
+  LOCATION_CHANGED,
+  LAST_SIGNAL
+};
+
+static guint signals[LAST_SIGNAL];
+
+
+static CcTimezoneMapOffset color_codes[] =
+{
+    {-11.0, 43, 0, 0, 255 },
+    {-10.0, 85, 0, 0, 255 },
+    {-9.5, 102, 255, 0, 255 },
+    {-9.0, 128, 0, 0, 255 },
+    {-8.0, 170, 0, 0, 255 },
+    {-7.0, 212, 0, 0, 255 },
+    {-6.0, 255, 0, 1, 255 }, // north
+    {-6.0, 255, 0, 0, 255 }, // south
+    {-5.0, 255, 42, 42, 255 },
+    {-4.5, 192, 255, 0, 255 },
+    {-4.0, 255, 85, 85, 255 },
+    {-3.5, 0, 255, 0, 255 },
+    {-3.0, 255, 128, 128, 255 },
+    {-2.0, 255, 170, 170, 255 },
+    {-1.0, 255, 213, 213, 255 },
+    {0.0, 43, 17, 0, 255 },
+    {1.0, 85, 34, 0, 255 },
+    {2.0, 128, 51, 0, 255 },
+    {3.0, 170, 68, 0, 255 },
+    {3.5, 0, 255, 102, 255 },
+    {4.0, 212, 85, 0, 255 },
+    {4.5, 0, 204, 255, 255 },
+    {5.0, 255, 102, 0, 255 },
+    {5.5, 0, 102, 255, 255 },
+    {5.75, 0, 238, 207, 247 },
+    {6.0, 255, 127, 42, 255 },
+    {6.5, 204, 0, 254, 254 },
+    {7.0, 255, 153, 85, 255 },
+    {8.0, 255, 179, 128, 255 },
+    {9.0, 255, 204, 170, 255 },
+    {9.5, 170, 0, 68, 250 },
+    {10.0, 255, 230, 213, 255 },
+    {10.5, 212, 124, 21, 250 },
+    {11.0, 212, 170, 0, 255 },
+    {11.5, 249, 25, 87, 253 },
+    {12.0, 255, 204, 0, 255 },
+    {12.75, 254, 74, 100, 248 },
+    {13.0, 255, 85, 153, 250 },
+    {-100, 0, 0, 0, 0 }
+};
+
 
 static void
 cc_timezone_map_dispose (GObject *object)
@@ -52,9 +126,35 @@ cc_timezone_map_dispose (GObject *object)
 
   g_clear_object (&priv->orig_background);
   g_clear_object (&priv->orig_background_dim);
+  g_clear_object (&priv->orig_color_map);
   g_clear_object (&priv->background);
+  g_clear_object (&priv->pin);
+  g_clear_pointer (&priv->bubble_text, g_free);
+
+  if (priv->color_map)
+    {
+      g_clear_object (&priv->color_map);
+
+      priv->visible_map_pixels = NULL;
+      priv->visible_map_rowstride = 0;
+    }
 
   G_OBJECT_CLASS (cc_timezone_map_parent_class)->dispose (object);
+}
+
+static void
+cc_timezone_map_finalize (GObject *object)
+{
+  CcTimezoneMapPrivate *priv = CC_TIMEZONE_MAP (object)->priv;
+
+  if (priv->tzdb)
+    {
+      tz_db_free (priv->tzdb);
+      priv->tzdb = NULL;
+    }
+
+
+  G_OBJECT_CLASS (cc_timezone_map_parent_class)->finalize (object);
 }
 
 /* GtkWidget functions */
@@ -110,9 +210,48 @@ cc_timezone_map_size_allocate (GtkWidget     *widget,
                                               allocation->height,
                                               GDK_INTERP_BILINEAR);
 
+  if (priv->color_map)
+    g_object_unref (priv->color_map);
+
+  priv->color_map = gdk_pixbuf_scale_simple (priv->orig_color_map,
+                                             allocation->width,
+                                             allocation->height,
+                                             GDK_INTERP_BILINEAR);
+
+  priv->visible_map_pixels = gdk_pixbuf_get_pixels (priv->color_map);
+  priv->visible_map_rowstride = gdk_pixbuf_get_rowstride (priv->color_map);
+
   GTK_WIDGET_CLASS (cc_timezone_map_parent_class)->size_allocate (widget,
                                                                   allocation);
 }
+
+static void
+cc_timezone_map_realize (GtkWidget *widget)
+{
+  GdkWindowAttr attr = { 0, };
+  GtkAllocation allocation;
+  GdkWindow *window;
+
+  gtk_widget_get_allocation (widget, &allocation);
+
+  gtk_widget_set_realized (widget, TRUE);
+
+  attr.window_type = GDK_WINDOW_CHILD;
+  attr.wclass = GDK_INPUT_OUTPUT;
+  attr.width = allocation.width;
+  attr.height = allocation.height;
+  attr.x = allocation.x;
+  attr.y = allocation.y;
+  attr.event_mask = gtk_widget_get_events (widget)
+                                 | GDK_EXPOSURE_MASK | GDK_BUTTON_PRESS_MASK;
+
+  window = gdk_window_new (gtk_widget_get_parent_window (widget), &attr,
+                           GDK_WA_X | GDK_WA_Y);
+
+  gdk_window_set_user_data (window, widget);
+  gtk_widget_set_window (widget, window);
+}
+
 
 static gdouble
 convert_longitude_to_x (gdouble longitude, gint map_width)
@@ -151,103 +290,183 @@ convert_latitude_to_y (gdouble latitude, gdouble map_height)
 }
 
 static void
-draw_hilight (CcTimezoneMap *map,
-              cairo_t       *cr)
+draw_text_bubble (cairo_t *cr,
+                  GtkWidget *widget,
+                  gdouble pointx,
+                  gdouble pointy)
 {
-  GtkWidget *widget = GTK_WIDGET (map);
-  CcTimezoneMapPrivate *priv = map->priv;
-  const char *fmt;
-  GWeatherTimezone *zone;
-  double selected_offset;
-  GdkPixbuf *hilight, *orig_hilight;
-  GtkAllocation alloc;
-  char *file;
-  GError *err = NULL;
+  static const double corner_radius = 9.0;
+  static const double margin_top = 12.0;
+  static const double margin_bottom = 12.0;
+  static const double margin_left = 24.0;
+  static const double margin_right = 24.0;
 
-  if (!priv->location)
+  CcTimezoneMapPrivate *priv = CC_TIMEZONE_MAP (widget)->priv;
+  GtkAllocation alloc;
+  PangoLayout *layout;
+  PangoRectangle text_rect;
+  double x;
+  double y;
+  double width;
+  double height;
+
+  if (!priv->bubble_text)
     return;
 
   gtk_widget_get_allocation (widget, &alloc);
+  layout = gtk_widget_create_pango_layout (widget, NULL);
 
-  /* paint hilight */
-  if (gtk_widget_is_sensitive (widget))
-    fmt = DATETIME_RESOURCE_PATH "/timezone_%g.png";
+  /* Layout the text */
+  pango_layout_set_alignment (layout, PANGO_ALIGN_CENTER);
+  pango_layout_set_spacing (layout, 3);
+  pango_layout_set_markup (layout, priv->bubble_text, -1);
+
+  pango_layout_get_pixel_extents (layout, NULL, &text_rect);
+
+  /* Calculate the bubble size based on the text layout size */
+  width = text_rect.width + margin_left + margin_right;
+  height = text_rect.height + margin_top + margin_bottom;
+
+  if (pointx < alloc.width / 2)
+    x = pointx + 25;
   else
-    fmt = DATETIME_RESOURCE_PATH "/timezone_%g_dim.png";
+    x = pointx - width - 25;
 
-  zone = gweather_location_get_timezone (priv->location);
+  y = pointy - height / 2;
 
-  /* XXX: Do we need to do anything for DST? I don't think so... */
-  selected_offset = gweather_timezone_get_offset (zone) / 60.0;
+  /* Make sure it fits in the visible area */
+  x = CLAMP (x, 0, alloc.width - width);
+  y = CLAMP (y, 0, alloc.height - height);
 
-  file = g_strdup_printf (fmt, selected_offset);
-  orig_hilight = gdk_pixbuf_new_from_resource (file, &err);
-  g_free (file);
-  file = NULL;
+  cairo_save (cr);
+  cairo_translate (cr, x, y);
 
-  hilight = gdk_pixbuf_scale_simple (orig_hilight, alloc.width, alloc.height, GDK_INTERP_BILINEAR);
-  gdk_cairo_set_source_pixbuf (cr, hilight, 0, 0);
+  /* Draw the bubble */
+  cairo_new_sub_path (cr);
+  cairo_arc (cr, width - corner_radius, corner_radius, corner_radius, radians (-90), radians (0));
+  cairo_arc (cr, width - corner_radius, height - corner_radius, corner_radius, radians (0), radians (90));
+  cairo_arc (cr, corner_radius, height - corner_radius, corner_radius, radians (90), radians (180));
+  cairo_arc (cr, corner_radius, corner_radius, corner_radius, radians (180), radians (270));
+  cairo_close_path (cr);
 
-  cairo_paint (cr);
-  g_object_unref (hilight);
-  g_object_unref (orig_hilight);
+  cairo_set_source_rgba (cr, 0.2, 0.2, 0.2, 0.7);
+  cairo_fill (cr);
 
-  g_clear_error (&err);
-}
+  /* And finally draw the text */
+  cairo_set_source_rgb (cr, 1, 1, 1);
+  cairo_move_to (cr, margin_left, margin_top);
+  pango_cairo_show_layout (cr, layout);
 
-static void
-draw_pin (CcTimezoneMap *map,
-          cairo_t       *cr)
-{
-  GtkWidget *widget = GTK_WIDGET (map);
-  CcTimezoneMapPrivate *priv = map->priv;
-  GdkPixbuf *pin;
-  GtkAllocation alloc;
-  GError *err = NULL;
-  double longitude, latitude;
-  double pointx, pointy;
-
-  gtk_widget_get_allocation (widget, &alloc);
-
-  if (!priv->location)
-    return;
-
-  if (!gweather_location_has_coords (priv->location))
-    return;
-
-  /* load pin icon */
-  pin = gdk_pixbuf_new_from_resource (DATETIME_RESOURCE_PATH "/pin.png", &err);
-
-  gweather_location_get_coords (priv->location, &latitude, &longitude);
-
-  pointx = convert_longitude_to_x (longitude, alloc.width);
-  pointy = convert_latitude_to_y (latitude, alloc.height);
-
-  pointx = CLAMP (floor (pointx), 0, alloc.width);
-  pointy = CLAMP (floor (pointy), 0, alloc.height);
-
-  gdk_cairo_set_source_pixbuf (cr, pin, pointx - PIN_HOT_POINT_X, pointy - PIN_HOT_POINT_Y);
-  cairo_paint (cr);
-
-  g_object_unref (pin);
+  g_object_unref (layout);
+  cairo_restore (cr);
 }
 
 static gboolean
 cc_timezone_map_draw (GtkWidget *widget,
                       cairo_t   *cr)
 {
-  CcTimezoneMap *map = CC_TIMEZONE_MAP (widget);
-  CcTimezoneMapPrivate *priv = map->priv;
+  CcTimezoneMapPrivate *priv = CC_TIMEZONE_MAP (widget)->priv;
+  GdkPixbuf *hilight, *orig_hilight;
+  GtkAllocation alloc;
+  gchar *file;
+  GError *err = NULL;
+  gdouble pointx, pointy;
+  char buf[16];
+  const char *fmt;
+
+  gtk_widget_get_allocation (widget, &alloc);
 
   /* paint background */
   gdk_cairo_set_source_pixbuf (cr, priv->background, 0, 0);
   cairo_paint (cr);
 
-  draw_hilight (map, cr);
-  draw_pin (map, cr);
+  /* paint hilight */
+  if (gtk_widget_is_sensitive (widget))
+    fmt = DATETIME_RESOURCE_PATH "/timezone_%s.png";
+  else
+    fmt = DATETIME_RESOURCE_PATH "/timezone_%s_dim.png";
+
+  file = g_strdup_printf (fmt,
+                          g_ascii_formatd (buf, sizeof (buf),
+                                           "%g", priv->selected_offset));
+  orig_hilight = gdk_pixbuf_new_from_resource (file, &err);
+  g_free (file);
+  file = NULL;
+
+  if (!orig_hilight)
+    {
+      g_warning ("Could not load hilight: %s",
+                 (err) ? err->message : "Unknown Error");
+      if (err)
+        g_clear_error (&err);
+    }
+  else
+    {
+
+      hilight = gdk_pixbuf_scale_simple (orig_hilight, alloc.width,
+                                         alloc.height, GDK_INTERP_BILINEAR);
+      gdk_cairo_set_source_pixbuf (cr, hilight, 0, 0);
+
+      cairo_paint (cr);
+      g_object_unref (hilight);
+      g_object_unref (orig_hilight);
+    }
+
+  if (priv->location)
+    {
+      pointx = convert_longitude_to_x (priv->location->longitude, alloc.width);
+      pointy = convert_latitude_to_y (priv->location->latitude, alloc.height);
+
+      pointx = CLAMP (floor (pointx), 0, alloc.width);
+      pointy = CLAMP (floor (pointy), 0, alloc.height);
+
+      draw_text_bubble (cr, widget, pointx, pointy);
+
+      if (priv->pin)
+        {
+          gdk_cairo_set_source_pixbuf (cr, priv->pin,
+                                       pointx - PIN_HOT_POINT_X,
+                                       pointy - PIN_HOT_POINT_Y);
+          cairo_paint (cr);
+        }
+    }
 
   return TRUE;
 }
+
+static void
+update_cursor (GtkWidget *widget)
+{
+  GdkWindow *window;
+  GdkCursor *cursor = NULL;
+
+  if (!gtk_widget_get_realized (widget))
+    return;
+
+  if (gtk_widget_is_sensitive (widget))
+    {
+      GdkDisplay *display;
+      display = gtk_widget_get_display (widget);
+      cursor = gdk_cursor_new_for_display (display, GDK_HAND2);
+    }
+
+  window = gtk_widget_get_window (widget);
+  gdk_window_set_cursor (window, cursor);
+
+  if (cursor)
+    g_object_unref (cursor);
+}
+
+static void
+cc_timezone_map_state_flags_changed (GtkWidget     *widget,
+                                     GtkStateFlags  prev_state)
+{
+  update_cursor (widget);
+
+  if (GTK_WIDGET_CLASS (cc_timezone_map_parent_class)->state_flags_changed)
+    GTK_WIDGET_CLASS (cc_timezone_map_parent_class)->state_flags_changed (widget, prev_state);
+}
+
 
 static void
 cc_timezone_map_class_init (CcTimezoneMapClass *klass)
@@ -258,11 +477,130 @@ cc_timezone_map_class_init (CcTimezoneMapClass *klass)
   g_type_class_add_private (klass, sizeof (CcTimezoneMapPrivate));
 
   object_class->dispose = cc_timezone_map_dispose;
+  object_class->finalize = cc_timezone_map_finalize;
 
   widget_class->get_preferred_width = cc_timezone_map_get_preferred_width;
   widget_class->get_preferred_height = cc_timezone_map_get_preferred_height;
   widget_class->size_allocate = cc_timezone_map_size_allocate;
+  widget_class->realize = cc_timezone_map_realize;
   widget_class->draw = cc_timezone_map_draw;
+  widget_class->state_flags_changed = cc_timezone_map_state_flags_changed;
+
+  signals[LOCATION_CHANGED] = g_signal_new ("location-changed",
+                                            CC_TYPE_TIMEZONE_MAP,
+                                            G_SIGNAL_RUN_FIRST,
+                                            0,
+                                            NULL,
+                                            NULL,
+                                            g_cclosure_marshal_VOID__POINTER,
+                                            G_TYPE_NONE, 1,
+                                            G_TYPE_POINTER);
+}
+
+
+static gint
+sort_locations (TzLocation *a,
+                TzLocation *b)
+{
+  if (a->dist > b->dist)
+    return 1;
+
+  if (a->dist < b->dist)
+    return -1;
+
+  return 0;
+}
+
+static void
+set_location (CcTimezoneMap *map,
+              TzLocation    *location)
+{
+  CcTimezoneMapPrivate *priv = map->priv;
+  TzInfo *info;
+
+  priv->location = location;
+
+  info = tz_info_from_location (priv->location);
+
+  priv->selected_offset = tz_location_get_utc_offset (priv->location)
+    / (60.0*60.0) + ((info->daylight) ? -1.0 : 0.0);
+
+  g_signal_emit (map, signals[LOCATION_CHANGED], 0, priv->location);
+
+  tz_info_free (info);
+}
+
+static gboolean
+button_press_event (GtkWidget      *widget,
+                    GdkEventButton *event)
+{
+  CcTimezoneMapPrivate *priv = CC_TIMEZONE_MAP (widget)->priv;
+  gint x, y;
+  guchar r, g, b, a;
+  guchar *pixels;
+  gint rowstride;
+  gint i;
+
+  const GPtrArray *array;
+  gint width, height;
+  GList *distances = NULL;
+  GtkAllocation alloc;
+
+  x = event->x;
+  y = event->y;
+
+
+  rowstride = priv->visible_map_rowstride;
+  pixels = priv->visible_map_pixels;
+
+  r = pixels[(rowstride * y + x * 4)];
+  g = pixels[(rowstride * y + x * 4) + 1];
+  b = pixels[(rowstride * y + x * 4) + 2];
+  a = pixels[(rowstride * y + x * 4) + 3];
+
+
+  for (i = 0; color_codes[i].offset != -100; i++)
+    {
+       if (color_codes[i].red == r && color_codes[i].green == g
+           && color_codes[i].blue == b && color_codes[i].alpha == a)
+         {
+           priv->selected_offset = color_codes[i].offset;
+         }
+    }
+
+  gtk_widget_queue_draw (widget);
+
+  /* work out the co-ordinates */
+
+  array = tz_get_locations (priv->tzdb);
+
+  gtk_widget_get_allocation (widget, &alloc);
+  width = alloc.width;
+  height = alloc.height;
+
+  for (i = 0; i < array->len; i++)
+    {
+      gdouble pointx, pointy, dx, dy;
+      TzLocation *loc = array->pdata[i];
+
+      pointx = convert_longitude_to_x (loc->longitude, width);
+      pointy = convert_latitude_to_y (loc->latitude, height);
+
+      dx = pointx - x;
+      dy = pointy - y;
+
+      loc->dist = dx * dx + dy * dy;
+      distances = g_list_prepend (distances, loc);
+
+    }
+  distances = g_list_sort (distances, (GCompareFunc) sort_locations);
+
+
+  set_location (CC_TIMEZONE_MAP (widget), (TzLocation*) distances->data);
+
+  g_list_free (distances);
+
+  return TRUE;
 }
 
 static void
@@ -293,7 +631,28 @@ cc_timezone_map_init (CcTimezoneMap *self)
       g_clear_error (&err);
     }
 
-  gtk_widget_set_has_window (GTK_WIDGET (self), FALSE);
+  priv->orig_color_map = gdk_pixbuf_new_from_resource (DATETIME_RESOURCE_PATH "/cc.png",
+                                                       &err);
+  if (!priv->orig_color_map)
+    {
+      g_warning ("Could not load background image: %s",
+                 (err) ? err->message : "Unknown error");
+      g_clear_error (&err);
+    }
+
+  priv->pin = gdk_pixbuf_new_from_resource (DATETIME_RESOURCE_PATH "/pin.png",
+                                            &err);
+  if (!priv->pin)
+    {
+      g_warning ("Could not load pin icon: %s",
+                 (err) ? err->message : "Unknown error");
+      g_clear_error (&err);
+    }
+
+  priv->tzdb = tz_load_db ();
+
+  g_signal_connect (self, "button-press-event", G_CALLBACK (button_press_event),
+                    NULL);
 }
 
 CcTimezoneMap *
@@ -302,19 +661,54 @@ cc_timezone_map_new (void)
   return g_object_new (CC_TYPE_TIMEZONE_MAP, NULL);
 }
 
-void
-cc_timezone_map_set_location (CcTimezoneMap    *map,
-                              GWeatherLocation *location)
+gboolean
+cc_timezone_map_set_timezone (CcTimezoneMap *map,
+                              const gchar   *timezone)
 {
-  CcTimezoneMapPrivate *priv = map->priv;
+  GPtrArray *locations;
+  guint i;
+  char *real_tz;
+  gboolean ret;
 
-  if (priv->location)
-    gweather_location_unref (priv->location);
+  real_tz = tz_info_get_clean_name (map->priv->tzdb, timezone);
 
-  if (location)
-    priv->location = gweather_location_ref (location);
-  else
-    priv->location = NULL;
+  locations = tz_get_locations (map->priv->tzdb);
+  ret = FALSE;
+
+  for (i = 0; i < locations->len; i++)
+    {
+      TzLocation *loc = locations->pdata[i];
+
+      if (!g_strcmp0 (loc->zone, real_tz ? real_tz : timezone))
+        {
+          set_location (map, loc);
+          ret = TRUE;
+          break;
+        }
+    }
+
+  if (ret)
+    gtk_widget_queue_draw (GTK_WIDGET (map));
+
+  g_free (real_tz);
+
+  return ret;
+}
+
+void
+cc_timezone_map_set_bubble_text (CcTimezoneMap *map,
+                                 const gchar   *text)
+{
+  CcTimezoneMapPrivate *priv = TIMEZONE_MAP_PRIVATE (map);
+
+  g_free (priv->bubble_text);
+  priv->bubble_text = g_strdup (text);
 
   gtk_widget_queue_draw (GTK_WIDGET (map));
+}
+
+TzLocation *
+cc_timezone_map_get_location (CcTimezoneMap *map)
+{
+  return map->priv->location;
 }
